# prompai-tasks

./: .gitignore  README.md  pyproject.toml
task1/: .env.example  README.md  config.py  constants.py  create_db.py  db.py  dict_to_pg.py  helpers.py  logger.py  main.py  sample.json  service.py
task2/: README.md  custom_exception_handler.py
task3/: README.md  worker_pool.py
task4/: README.md
